# pgmem

./: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  README.md  index.js  jest.config.ts  package-lock.json  package.json  settings.toml  tsconfig.json
.github/workflows/: release-npm.yml  release-tag.yml  releast-tag.yml
src/: index.ts  interface.rs  lib.rs
src/interface/: interface.rs  mod.rs  system_server.rs  utils.rs
src/system/: config.rs  connection.rs  db.rs  logger.rs  mod.rs  system.rs  system_server.rs  utils.rs
src/system/utils/: deserializer.rs  mac.rs  migration_utils.rs  mod.rs
src/system_tasks/: daemon.rs  mod.rs  test_run.rs  web_ui.rs
test/: db.test.js  utils.js
test/fixtures/migrations/: 1_migration.sql  migration.sql
