[package]
name = "pqmem"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
config = "0.13.2"
crossbeam = "0.8.2"
flexi_logger = "0.24.1"
hyper = { version = "0.14.22", features = ["socket2"] }
pg-embed = "0.6.5"
portpicker = "0.1.1"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
sha2 = "0.10.6"
sqlx = { version = "0.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "uuid",
  "tls",
  "time",
] }
structopt = { version = "0.3.26", features = ["color"] }
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5.9"
tracing = { version = "0.1.37", features = ["async-await"] }
typetag = "0.2.3"
warp = "0.3.3"
once_cell = "1.16.0"
serde_json = "1.0.87"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
glob = "0.3.0"
futures = { version = "0.3.25", features = ["executor", "thread-pool"] }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6", "channel-api", "promise-api", "try-catch-api"]
