[package]
name = "pmem"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = [
  "test-util",
  "macros",
  "rt-multi-thread",
] }
anyhow = "1.0.66"
pg-embed = "0.6.5"
thiserror = "1.0.37"
portpicker = "0.1.1"
serde = { version = "1.0.147", features = ["derive"] }
futures = { version = "0.3.25", features = ["executor", "thread-pool"] }
tracing = "0.1.37"
sysinfo = "0.26.7"
once_cell = "1.16.0"
flexi_logger = "0.24.1"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
glob = "0.3.0"
sqlx = { version = "0.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "uuid",
  "tls",
  "time",
] }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6", "channel-api", "promise-api", "try-catch-api"]
