[package]
name = "pmem"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = [
  "test-util",
  "macros",
  "rt-multi-thread",
] }
anyhow = "1.0.66"
pg-embed = { version = "0.6", features = ["rt_tokio"] }

thiserror = "1.0.37"
portpicker = "0.1.1"
serde = { version = "1.0.147", features = ["derive"] }
futures = { version = "0.3.25", features = ["executor", "thread-pool"] }
tracing = "0.1.37"
sysinfo = "0.26.7"
once_cell = "1.16.0"
flexi_logger = { version = "0.24", features = [
  "colors",
  "atty",
  "ansi_term",
  "tracing-subscriber",
  "tracing",
  "async",
] }
glob = "0.3.0"
sqlx = { version = "0.6", features = [
  "runtime-tokio-rustls",
  "migrate",
  "postgres",
  "macros",
  "uuid",
  "tls",
  "time",
] }
tempdir = "0.3.7"
cuid = "1.2.0"
url = "2.3.1"
log = "0.4.17"
ansi_term = { version = "0.12" }
atty = { version = "0.2" }
env_logger = "0.9.3"
serde_derive = "1.0.147"
serde_bytes = "0.11.7"
neon-serde3 = "0.10.0"
serde-aux = "4.1.0"


[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6", "channel-api", "promise-api", "try-catch-api"]

[profile.release]
panic = 'abort'

[dev-dependencies]
serde_json = "1.0.87"
